...
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Reset Password</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Name</string>
    <string name="register">Sign up</string>
    <string name="login">Log in</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="reset_password">Reset Password</string>
    <string name="send">Send</string>
    <string name="sign_out">Sign Out</string>
...
